add css and javascript

--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
-<form action="index.html" method="get">
-  ... 表單內容...
-  name: <input type="text"><br>
-  password: <input type="password"><br>
-  Content: <textarea></textarea><br><br><br><br>
-  <select>
-    <option>1</option>
-    <option>2</option>
-    <option>3</option>
-  </select><br>
-  <p>123</p>
-  <input type="radio" name="123">A<br>
-  <input type="radio" name="123">B<br>
-  <p>123</p>
-  <input type="radio" name="123">C<br>
-  <input type="radio" name="123">D<br>
-  <input type="submit" value="送出表單">
-</form>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>I'm title.</title>
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Cabin|Inconsolata|Nunito|Nunito+Sans|Pacifico|Quicksand|Rubik|VT323" rel="stylesheet">
+
+  </head>
+  <body>
+    <h1></h1>
+    <h2>My top level heading</h2>
+    <h3>My subheading</h3>
+    <h4>My sub-subheading</h4>
+    <p>This is a single paragraph.</p>
+    <p>At DirectGo, we are co-workers and friends. </p>
+    <p>We sell </p>
+    <ul>
+      <li>Furniture</li>
+      <li>Racing Cars</li>
+      <li>Cooker</li>
+      <li>Fancy Beds</li>
+    </ul>
+    <img src="images/70.jpg", alt="scarlett leather long wallet">
+    <ol>
+      <li>Furniture</li>
+      <li>Racing Cars</li>
+      <li>Cooker</li>
+      <li>Fancy Beds</li>
+    </ol>
+    <p>We are together.</p>
+    <a href="https://google.com">google me.</a><br>
+    <button>Change User</button>
+    <script src="scripts/main.js"></script>
+  </body>
+</html>
