--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <a href="https://www.mozilla.org/en-US/firefox/new/">
           <img src="firefox-logo400.png" alt="Download Firefox"
                srcset="firefox_logo120.png 120w,
-                       firefox_logo400.png 400w"
+                       firefox-addons400.jpg.png 400w"
                sizes="(max-width: 480px) 120px,
                       400px">
         </a>
