--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
       <div class="block">
         <h2>湯晨</h2>
-        <iframe  align="center" width="400" align="center" height="300" src="https://www.youtube.com/embed/0W4WI8YNvOM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        <iframe width="400" height="300" src="https://www.youtube.com/embed/I-cCr7sYsH8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
         <img src="images/01湯.jpg" alt="" height="150">
         <img src="images/03湯.jpg" alt="" width="200">
         <img src="images/09湯.jpg" alt="" width="200">
@@ -128,51 +128,61 @@
 
       <div class="block2">
         <h2>卓芮</h2>
-        <iframe  align="center" width="400" align="center" height="300" src="https://www.youtube.com/embed/0W4WI8YNvOM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        <iframe width="400" height="300" src="https://www.youtube.com/embed/tGJR_yCadeU" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
         <img src="images/25卓芮.jpg" alt="" width="400">
       </div>
 
       <div class="block">
         <h2>靖文</h2>
-        <iframe  align="center" width="400" align="center" height="300" src="https://www.youtube.com/embed/0W4WI8YNvOM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        <iframe width="400" height="300" src="https://www.youtube.com/embed/1tpSflcXGyk" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
         <img src="images/12靖文.jpg" alt="" width="400">
       </div>
 
       <div class="block2">
         <h2>吳映萱</h2>
-        <iframe  align="center" width="400" align="center" height="300" src="https://www.youtube.com/embed/0W4WI8YNvOM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-        <img src="images/25卓芮.jpg" alt="" width="400">
+        <iframe width="400" height="300" src="https://www.youtube.com/embed/Ob3WHRQD7Ug" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        <img src="images/35吳映萱.jpg" alt="" width="400">
       </div>
 
       <div class="block">
         <h2>乓乓</h2>
-        <iframe  align="center" width="400" align="center" height="300" src="https://www.youtube.com/embed/0W4WI8YNvOM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-        <img src="images/12靖文.jpg" alt="" width="400">
+        <iframe width="400" height="300" src="https://www.youtube.com/embed/gkvPYYtQySE" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        <img src="images/10水雞群組.jpg" alt="" width="400">
+        <img src="images/11水雞群組.jpg" alt="" width="400">
       </div>
 
       <div class="block2">
         <h2>陳怡卉</h2>
-        <iframe  align="center" width="400" align="center" height="300" src="https://www.youtube.com/embed/0W4WI8YNvOM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-        <img src="images/25卓芮.jpg" alt="" width="400">
+        <iframe width="400" height="300" src="https://www.youtube.com/embed/5PGjAdoETDY" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        <img src="images/20水雞群組.jpg" alt="" height="300">
       </div>
 
       <div class="block">
         <h2>曾暄儒</h2>
-        <iframe  align="center" width="400" align="center" height="300" src="https://www.youtube.com/embed/0W4WI8YNvOM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-        <img src="images/12靖文.jpg" alt="" width="400">
+        <iframe width="400" height="300" src="https://www.youtube.com/embed/2ffmmIx7PTs" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        <img src="images/60水雞群組.jpg" alt="" width="400">
       </div>
 
       <div class="block2">
         <h2>許瑋庭</h2>
-        <iframe  align="center" width="400" align="center" height="300" src="https://www.youtube.com/embed/0W4WI8YNvOM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-        <img src="images/25卓芮.jpg" alt="" width="400">
+        <iframe width="400" height="300" src="https://www.youtube.com/embed/Ris1ZlJ7Bng" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        <img src="images/30許瑋庭.jpg" alt="" width="400">
       </div>
 
       <div class="block">
         <h2>許芳</h2>
-        <iframe  align="center" width="400" align="center" height="300" src="https://www.youtube.com/embed/0W4WI8YNvOM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-        <img src="images/12靖文.jpg" alt="" width="400">
+        <iframe width="400" height="300" src="https://www.youtube.com/embed/QoK3fuMuw_U" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        <!-- <img src="images/50許芳.jpg" alt="" width="400"> -->
       </div>
+
+      <!-- <div class="block">
+        <h2>Other Hints</h2>
+        <img src="images/45.jpg" alt="" width="400">
+        <img src="images/47.jpg" alt="" width="400">
+        <img src="images/55.jpg" alt="" width="400">
+        <img src="images/70.jpg" alt="" width="400">
+        <img src="images/71.jpg" alt="" width="400">
+      </div> -->
 
       <div class="red-panda">
         <!-- insert picture element -->
